[gd_scene load_steps=32 format=3 uid="uid://3v635llq0pdp"]

[ext_resource type="Script" path="res://mulligan.gd" id="1_0swix"]
[ext_resource type="Texture2D" uid="uid://b32e54ku0qpgl" path="res://mulligan/TheMulligan.png" id="2_w2tm5"]
[ext_resource type="Script" path="res://RayCastDIR.gd" id="3_8vgee"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5hj4"]
size = Vector2(40.0941, 20.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6bom"]
atlas = ExtResource("2_w2tm5")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak4h8"]
atlas = ExtResource("2_w2tm5")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nefu7"]
atlas = ExtResource("2_w2tm5")
region = Rect2(40, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_366sx"]
atlas = ExtResource("2_w2tm5")
region = Rect2(60, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7st"]
atlas = ExtResource("2_w2tm5")
region = Rect2(80, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_43jwh"]
atlas = ExtResource("2_w2tm5")
region = Rect2(100, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3lwg"]
atlas = ExtResource("2_w2tm5")
region = Rect2(120, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yd0f"]
atlas = ExtResource("2_w2tm5")
region = Rect2(140, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xpva"]
atlas = ExtResource("2_w2tm5")
region = Rect2(160, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y2i4"]
atlas = ExtResource("2_w2tm5")
region = Rect2(180, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdfqc"]
atlas = ExtResource("2_w2tm5")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_06144"]
atlas = ExtResource("2_w2tm5")
region = Rect2(20, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc1qc"]
atlas = ExtResource("2_w2tm5")
region = Rect2(40, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ve1"]
atlas = ExtResource("2_w2tm5")
region = Rect2(60, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e5sj"]
atlas = ExtResource("2_w2tm5")
region = Rect2(80, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_m38uq"]
atlas = ExtResource("2_w2tm5")
region = Rect2(100, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5his"]
atlas = ExtResource("2_w2tm5")
region = Rect2(120, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xqvt"]
atlas = ExtResource("2_w2tm5")
region = Rect2(140, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_42xu0"]
atlas = ExtResource("2_w2tm5")
region = Rect2(160, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5aej"]
atlas = ExtResource("2_w2tm5")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmai1"]
atlas = ExtResource("2_w2tm5")
region = Rect2(20, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_bswpp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6bom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nefu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_366sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43jwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3lwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yd0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xpva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y2i4")
}],
"loop": true,
"name": &"SeeU",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdfqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06144")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc1qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ve1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e5sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m38uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5his")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xqvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42xu0")
}],
"loop": true,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5aej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmai1")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_03x60"]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_an8fp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p22yc"]
resource_name = "SeeU"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"SeeU"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 9]
}

[sub_resource type="Animation" id="Animation_i512s"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n1klp"]
_data = {
"RESET": SubResource("Animation_an8fp"),
"SeeU": SubResource("Animation_p22yc"),
"attack": SubResource("Animation_i512s"),
"idle": SubResource("Animation_03x60")
}

[node name="mulligan" type="CharacterBody2D"]
script = ExtResource("1_0swix")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -0.7)
scale = Vector2(1, 0.979701)
texture = ExtResource("2_w2tm5")
hframes = 10
vframes = 3

[node name="RayCastDIR" type="RayCast2D" parent="."]
scale = Vector2(1, 1.00628)
target_position = Vector2(40, 0)
script = ExtResource("3_8vgee")

[node name="RayCastESQ" type="RayCast2D" parent="."]
target_position = Vector2(-40, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.76837e-07, -1)
scale = Vector2(0.997653, 0.994729)
shape = SubResource("RectangleShape2D_h5hj4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_bswpp")
animation = &"idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n1klp")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
